update di-example